# hot-curry

./: .gitignore  Cargo.toml  README.md
crates/hot-curry/: .gitignore  Cargo.toml
crates/hot-curry/src/: errors.rs  filters.rs  lib.rs  main.rs  types.rs  visitor.rs
crates/tera-visitor/: Cargo.toml
crates/tera-visitor/src/: lib.rs
examples/: Cargo.toml
examples/resources/: hot_curry.toml  source.yml
examples/src/: analyze.rs  simple.rs
src/: config.rs  lib.rs  main.rs  utils.rs
tests/: hot_curry.toml  html_test.rs  main.rs  render.html  source.yml
tests/resources/: index.html
tests/snapshots/: html_test__it_prepends_base_url_to_relative_paths.snap
