[workspace]
members = ["crates/*", "examples"]

[workspace.package]
version = "0.1.0"
rust-version = "1.65"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.68"
clap = { version = "3.2.23", features = ["derive"] }
headless_chrome = "0.9.0"
hot-curry = { path = "./crates/hot-curry", version = "0.1.0" }
htmlescape = "0.3.1"
pulldown-cmark = "0.9.2"
rayon = "1.6.1"
reqwest = "0.11.13"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.8.26"
tera = "1.17.1"
tera-visitor = { path = "./crates/tera-visitor", version = "0.1.0" }
thiserror = "1.0.38"
tokio = "1.24.1"
toml = "0.5.10"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = { version = "2.3.1", features = ["serde"] }
