[package]
edition = "2018"
name = "hot-curry"
version = "0.1.0"

[dependencies]
anyhow = "1.0.42"
clap = "3.0.0-beta.2"
headless_chrome = "0.9.0"
rayon = "1.5.1"
reqwest = {version = "0.11.4", features = ["blocking"]}
serde = {version = "1.0.127", features = ["derive"]}
serde_derive = "1.0.127"
serde_json = "1.0.66"
serde_yaml = "0.8.17"
tera = "1.12.1"
toml = "0.5.8"
url = {version = "2.2.2", features = ["serde"]}
